third_party/move/move-compiler-v2/tests/lambda/storable/simplifier_func.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::mod1 {
    struct S {
        x: u64,
    }
    public fun triple(x: u64): u64 {
        {
          let _f: |u64|u64 = closure#0mod1::triple$lambda$1();
          Mul<u64>(x, 3)
        }
    }
    private fun triple$lambda$1(x: u64): u64 {
        {
          let _t: S = pack mod1::S(3);
          x
        }
    }
} // end 0x42::mod1

// -- Sourcified model before bytecode pipeline
module 0x42::mod1 {
    struct S {
        x: u64,
    }
    public fun triple(x: u64): u64 {
        let _f = |arg0| triple$lambda$1(arg0);
        x * 3
    }
    fun triple$lambda$1(x: u64): u64 {
        let _t = S{x: 3};
        x
    }
}


Diagnostics:
error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/storable/simplifier_func.move:7:19
  │
7 │         let _f = (|x: u64| { let _t = S { x: 3 }; x } : |u64|u64 has drop);
  │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
